--- a/blog/2024-08-01-mdx-blog-post.mdx
+++ b/blog/2024-08-01-mdx-blog-post.mdx
@@ -1,6 +1,6 @@
 ---
-slug: mdx-blog-post
-title: MDX Blog Post
+slug: React-blog-post
+title: React Blog Post
 authors: [deep]
 tags: [docusaurus]
 ---
