--- a/docs/guide/salesforce-basics/intro.mdx
+++ b/docs/guide/salesforce-basics/intro.mdx
@@ -1,7 +1,9 @@
 ---
 sidebar_position: 1
-title: Salesforce Cookbook
+title: Get Started
 description: Introduction to Salesforce for developers who prefer brevity.
+toc_min_heading_level: 2
+toc_max_heading_level: 5
 ---
 
 - **Salesforce** is a _Platform as a Service (PaaS)_ and _Software as a Service (SaaS)_ provider.
@@ -17,27 +19,30 @@ Use `CASESAFEID()` to safely reference record IDs in integrations and formulas.
 
 ## User Licenses
 
-- Every user must be assigned a **user license** to access Salesforce. The license determines the features available to the user.
+- Every user must be assigned a **user license** to access Salesforce. A user's license determines the baseline of features that the user can access.
 
 ### Types of User Licenses
 
-- **Login-Based User Licenses**
-  - _Lightning Platform Starter_
-  - _Lightning Platform Plus_
-  - _Salesforce Platform Login_
-- **Based on Job Function**
-  - _Lightning Platform user license_: Standard object permissions for accounts and contacts (not cases).
-  - _Salesforce user license_: Full access to standard CRM apps and objects (accounts, contacts, cases).
+#### Login-Based User Licenses
 
-:::info
-Salesforce packages licenses in SKUs (stock-keeping units). SKUs may contain one or more licenses and capabilities.
-:::
+- _Lightning Platform Starter_ and Lightning Platform Plus licenses contain a Salesforce Platform User license. The Salesforce Platform License and Salesforce Platform Login licenses can use the Salesforce Platform permission set.
+- _Lightning Platform Plus_
+- _Salesforce Platform Login_
+
+[learn More.](https://help.salesforce.com/s/articleView?id=platform.users_license_types_communities_lightning_platform_details.htm&type=5)
+
+#### Based on Job Function
+
+- Lightning Platform user license Standard object permissions for accounts and contacts (not cases).
+- Salesforce user license Full access to standard CRM apps and objects (accounts, contacts, cases).
+- Salesforce packages licenses in SKUs (stock-keeping units). SKUs may contain one or more licenses and capabilities. Generally, the name of the SKU and the license match, but not always.
 
 ## Queue in Salesforce
 
-- A **queue** is a group of users sharing workload.
-- Records assigned to a queue must be accepted by a user to become the record’s owner.
-- Ownership can be transferred to another queue user or any other user.
+- A queue is a group of users who collaborate effectively to share the workload.
+- Any record assigned to a queue requires the user in that queue to accept it as their own to become the record’s owner.
+- Once a user becomes the owner, they can transfer ownership of the record to another queue user or any other user.
+- Whenever you are transferring a record to another user. that new user should have Salesforce Licenses assigned to him.
 
 :::tip
 When transferring a record, ensure the new user has a Salesforce license assigned.
@@ -45,15 +50,16 @@ When transferring a record, ensure the new user has a Salesforce license assigne
 
 ## Permission Set
 
-- Up to **1000 permission sets** can be created per org.
-- Used to enhance access levels.
-- To assign a permission set, the user must have a Salesforce license.
+- Within an organizational structure, <mark>we can create up to 1000 permission sets.</mark>
+- These sets are utilized to enhance access levels.
+- To assign a permission set, the user must possess a Salesforce license.
 
 ### Permission Set Group
 
-- Bundle permission sets together based on job function.
-- Includes all permissions from the grouped sets.
-- **Muting** is possible to restrict specific permissions within a group.
+- With permission set groups, you can bundle permission sets together based on a job function.
+- A permission set group includes all permissions in the permission sets.
+- If you’re a subscriber to an app with permission set groups, you can add managed permission sets to your local group
+- Muting is possible in a permission set group, but the access to the permission should be granted through that permission set group.
 
 ## Users in Salesforce
 
@@ -62,150 +68,34 @@ When transferring a record, ensure the new user has a Salesforce license assigne
 
 ### Frozen User
 
+- Freezing a user suspends their login access without deactivating their license.
+- If you intend to prevent a user from accessing Salesforce, you can proceed with freezing their account. Alternatively, if the user is no longer using the Salesforce instance, you can deactivate their account.
+
 :::info
-Freezing a user suspends their login access without deactivating their license.
-:::
+**In certain scenarios, users may encounter difficulties in immediately deactivating their accounts, In such Scenarios freezing is useful.**
 
-**Scenarios where freezing is useful:**
+**Scenarios**
 
-- User is default owner of leads/cases.
-- User is a workflow user or recipient.
-- User is a customer portal admin.
-- User is selected in a custom hierarchy field.
+- User is default owner of leads.
+- User is default or automated case owner.
+- User is default lead creator or owner.
+- User is default workflow user.
+- User is recipient of a workflow email alert.
+- A user selected in a custom hierarchy field.
+- User is a customer portal administrator.
 
-:::warning
-Freezing does **not** release the license. Deactivating a user does.
-:::
+  :::
+
+  :::warning
+  It is worth considering the potential impact of deactivation. Deactivating a user frees up the associated license, which can be utilized by another user. Conversely, freezing a user will not release the licenses that are currently in use.
+  :::
 
 ### Deactivated User
 
-- Deactivated users cannot log in or participate in workflows.
-- Their licenses become available for reassignment.
-- Manually shared records and team access are lost.
-- Data can be transferred to other users.
-
-## Organization-Wide Default (OWD)
-
-- Sets baseline access to data not owned by the user.
-- Can be set for custom and some standard objects.
-
-### Access Levels
-
-- **Public Read/Write**: All users can see and edit every record.
-- **Public Read-Only**: All users can see every record.
-- **Private**: Users can only see records they own.
-- **Public Read/Write/Transfer**: Only for Lead and Case objects.
-
-:::tip
-Enable "Manual User Record Sharing" to allow users to share their records.
-:::
-
-## Sharing Model
-
-- Sharing rules can be set for every standard and custom object.
-- Used to create exceptions to OWD for specific users.
-
-### Types of Sharing Mechanisms
-
-- **Manual Sharing**
-- **Apex Sharing**
-- **Public Groups**
-- **Sharing Rules**
-  - Criteria-based
-  - Owner-based
-
-:::info
-Sharing rules can only grant wider access, not restrict it.
-:::
-
-## Reports in Salesforce
-
-Salesforce supports four types of reports:
-
-1. **Tabular**: Data in rows and columns.
-2. **Summary**: Group by rows.
-3. **Matrix**: Group by columns.
-4. **Joined**: Combine multiple report types.
-
-## Key Points Regarding Objects
-
-- New custom objects have four standard fields:
-  - Name
-  - Owner
-  - Created By
-  - Last Modified By
-
-:::warning
-These fields cannot be deleted.
-:::
-
-## Relationship Types
-
-- Relationships are created on the child object.
-- Two main types:
-  - **One-to-Many**
-  - **Many-to-Many** (using Junction objects)
-- Four categories:
-  - Lookup
-  - Master-Detail
-  - Self
-  - Hierarchical
-
-### Lookup Relationship
-
-- **Definition:** Connects two objects (child-parent).
-- **Purpose:** Retrieve values from related objects.
-- **Implementation:** Add lookup fields and related lists to page layouts.
-
-**Characteristics:**
-
-- Loosely coupled (deleting parent does not delete child).
-- Field references can be null.
-- No cascade deletion.
-- Sharing/security are independent.
-- Max 40 relationships per child object (38 lookup + 2 master-detail).
-
-### Master-Detail Relationship
-
-- Strong parent-child connection.
-- Child inherits parent security; deleting parent deletes children.
-- Supports **roll-up summary fields**.
-- Owner field on child is set to parent owner.
-- No sharing rules/manual sharing/queues on detail side.
-
-:::tip
-Enable "Allow Reparenting" to move child records to different parents.
-:::
-
-## Field Dependencies
-
-- Dynamically filter picklist values based on another field (controlling field).
-- Controlling field: Standard/custom checkbox or picklist (1–300 values).
-- Dependent field: Custom picklist or multi-select picklist.
-
-## Field History Tracking
-
-- Enable during object creation.
-- Track changes to selected fields (old/new values, date, user).
-- Multi-select picklists and large text fields are tracked as edited only.
-
-## Rollup-Summary Field
-
-- Up to **10 roll-up summary fields** per object.
-- Available on master object in master-detail relationships.
-- Aggregate operations: Sum, Min, Max, Count.
-- Can include all or filtered child records.
-
-:::info
-Some standard relationships (e.g., Account-Opportunity) behave as master-detail for roll-up summaries.
-:::
-
-## Button Links and Actions
-
-- **Global Action:** Available on home/chatter/object pages (cannot create related records).
-- **Object-Specific Action:** Related to objects, can create related records.
-
-## Recycle Bin in Salesforce
-
-- Records remain for **15 days** in the Recycle Bin.
-- Can be restored within this period; after 15 days, records are permanently deleted.
+- Deactivating a user in Salesforce means that user will not be deleted from the system.
+- They cannot be part of workflows or any part of automated process.
+- Deactivating a user will make the #licenses available for use within your organization.
+- Deactivated users lose access to any records that were manually shared with them, or records that were shared with them as team members.
+- Users higher in the role hierarchy relative to the deactivated users also lose access to those records. However, you can still transfer their data to other users and view their names on the Users page.
+- User will no longer be able to log in to Salesforce and their records can be transferred to another user.
+- Whenever you are transferring a record to another user. that new user should have Salesforce Licenses assigned to him.
